--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,14 @@
 {
   "name": "resume-analyzer",
   "version": "1.0.0",
+  "description": "Backend for Resume Analyzer App",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "Vignesh",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@google/genai": "^0.10.0",
     "cors": "^2.8.5",
